--- a/Playbooks/test/playbook.yml
+++ b/Playbooks/test/playbook.yml
@@ -1,22 +1,12 @@
 -
+  name: Spin up MySQL DB
+  hosts: vm1
+  roles:
+    - python
+    - mysql_db
+-
   name: Spin up Python web server
-  hosts: vms
-  tasks:
-  - name: Install dependencies
-    apt:
-      name: "{{ item }}"
-      update_cache: yes
-      state: present
-    loop:
-      - python
-      - python-setuptools
-      - python-dev
-      - build-essential
-      - python-pip
-      - python-mysqldb
-  - name: Upgrade pip
-    pip:
-      name: pip
-      extra_args: --upgrade
-  - include: tasks/db.yml
-  - include: tasks/webserver.yml
+  hosts: vm2
+  roles:
+    - python
+    - flask_web
