--- a/Playbooks/test/roles/python/tasks/main.yml
+++ b/Playbooks/test/roles/python/tasks/main.yml
@@ -10,8 +10,9 @@
     - build-essential
     - python-pip
     - python-mysqldb
-#- name: Upgrade pip
-#  pip:
-#    name: pip
-#    state: forcereinstall
-#    executable: pip2
+- name: Upgrade pip
+  pip:
+    name: pip
+    state: forcereinstall
+    executable: pip2
+  ignore_errors: yes
