--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -4,7 +4,10 @@
     - name: Wait test
       wait_for: 
         port: 22
-        host: 172.17.0.2
+        host: "{{ item }}"
+      loop:
+        - 172.17.0.2
+        - 172.17.0.3
     - name: After wait
       debug:
         msg: Wait ended
