--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -1,14 +1,10 @@
 - name: Testing for EJ
   hosts: localhost
   tasks:
-    - name: Wait test
-      wait_for: 
-        port: 22
-        host: "{{ item }}"
-        timeout: 1430
-      loop:
-        - 172.17.0.2
-        - 172.17.0.3
-    - name: After wait
-      debug:
-        msg: Wait ended
+    - name: Touch test
+      copy:
+        dest: /etc/docker/daemon.json
+        content: |
+          {
+            "bip": "10.10.10.1/24"
+          }
