--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -2,9 +2,7 @@
   hosts: localhost
   tasks:
     - name: Touch test
-      copy:
-        dest: /etc/docker/daemon.json
-        content: |
-          {
-            "bip": "10.10.10.1/24"
-          }
+      include_tasks: "{{ item }}"
+      loop:
+        - t1.yml
+        - t2.yml
