--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -1,19 +1,11 @@
 - name: Testing for EJ
   hosts: localhost
   vars:
-    keys: "{{ lookup('file', 'keys.txt') }}"
+    ip: "{{lookup('file', 'svc.txt')}}"
   tasks:
-    - name: Parse test (Recovery)
+    - name: Parse test (svc)
       set_fact:
-        recovery_keys: "{{ keys | regex_findall('\\d:\\s+([^\\r]+)', '\\1') }}"
-    - name: Parse test (Root Token)
-      set_fact:
-        root_token: "{{ keys | regex_search('Token:\\s+([^\\r]+)', '\\1') }}"
+        v_ip: "{{ip | regex_search('LoadBalancer\\s+[^\\s]+\\s+([^\\s]+)\\s', '\\1')}}"
     - name: Parse test (Recovery)
       debug:
-        msg: "{{ item }}"
-      loop: "{{ recovery_keys }}"
-    - name: Parse test (Root Token)
-      debug:
-        msg: "{{ root_token }}"
-      
+        msg: "{{v_ip}}"
