--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -1,11 +1,15 @@
 - name: Testing for EJ
   hosts: localhost
   vars:
-    ip: "{{lookup('file', 'svc.txt')}}"
+    keys:
+      - key1
+      - key2
+      - key3
+      - key4
   tasks:
-    - name: Parse test (svc)
-      set_fact:
-        v_ip: "{{ip | regex_search('LoadBalancer\\s+[^\\s]+\\s+([^\\s]+)\\s', '\\1')}}"
-    - name: Parse test (Recovery)
+    - name: object loop
       debug:
-        msg: "{{v_ip}}"
+        msg: "{{ loop_idx + 1 }} - {{ item }}"
+      loop: "{{ keys }}"
+      loop_control:
+        index_var: loop_idx
