--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -1,15 +1,5 @@
 - name: Testing for EJ
   hosts: localhost
-  vars:
-    keys:
-      - key1
-      - key2
-      - key3
-      - key4
   tasks:
-    - name: object loop
-      debug:
-        msg: "{{ loop_idx + 1 }} - {{ item }}"
-      loop: "{{ keys }}"
-      loop_control:
-        index_var: loop_idx
+    - name: collection test
+      command: ansible-galaxy install -r req.yml -v
