--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -1,12 +1,8 @@
 - name: Testing for EJ
   hosts: localhost
-  vars:
-    tmp: "8520"
   tasks:
-    - name: join test
-      copy:
-        dest: "tst.txt"
-        content: |
-          var1=1234
-          var2="{{tmp}}"
-          var3=09877
+    - name: template test
+      include_role:
+        name: testing
+      vars:
+        isTrue: True
