--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -1,26 +1,13 @@
 - name: Testing for EJ
   hosts: localhost
   vars:
-    testvar: This wi"th 'SINGLE' quotes
+    testvar1: asdf
+    testvar2: qwer
+    testvar3: zxcv
   
   tasks:
-  - name: DEBUG
-    debug:
-      msg: "{{testvar}}"
-
-  - name: Replace test
-    set_fact:
-      names: "{{ names | default([]) + [item | string | replace(\"'\", '\"')] }}"
-    with_sequence: start=1 end=4 format=test%02x
-  
-  - name: DEBUG
-    debug:
-      msg: "{{ names }}"
-  
   - name: Template testing
     template:
-      src: "{{ item }}"
-      dest: "tst.txt"
-    with_fileglob:
-      - "tst.txt.j2"
+      src: tst.yaml.j2
+      dest: tst.yaml
     
