--- a/Playbooks/ej-test/t1.yml
+++ b/Playbooks/ej-test/t1.yml
@@ -1,3 +1,15 @@
-- name: Loop test
+- name: Item value
   debug:
-    msg: Test 1
+    msg: "{{ item }}"
+
+- name: Item value - name
+  debug:
+    msg: "{{ item.name }}"
+
+- name: Item value - a
+  debug:
+    msg: "{{ item.a }}"
+
+- name: Item value - b
+  debug:
+    msg: "{{ item.b }}"
