Test variables in task names

--- a/Playbooks/ej-test/test.yml
+++ b/Playbooks/ej-test/test.yml
@@ -1,13 +1,9 @@
 - name: Testing for EJ
   hosts: localhost
   vars:
-    test: "this is  a     string"
+    test: "name test"
   
   tasks:
-  - name: Var testing
+  - name: Var {{ test }} testing
     debug:
       msg: "{{ test }}"
-
-  - name: Var testing
-    debug:
-      msg: "{{ test.split()[3] }}"
