--- a/Playbooks/ej-test/combine.yml
+++ b/Playbooks/ej-test/combine.yml
@@ -4,24 +4,18 @@
 
 - name: Volatile variable for second file
   set_fact:
-    file_2: "{{ file2 }}"
+    cust_2: "{{ cust }}"
+
+- name: DEBUGGING
+  debug:
+    msg: "{{ cust_2 }}"
 
 - name: Loop through first list
   include_tasks: cgns.yml
-  loop: "{{ file1 }}"
+  loop: "{{ uni }}"
   loop_control:
     loop_var: cgn
 
-- name: Loop variable for remaining entries
+- name: Add remaining second list
   set_fact:
-    file_list: "{{ file_2 }}"
-
-- name: Clear variable for second file
-  set_fact:
-    file_2: []
-
-- name: Loop through remaining second list
-  include_tasks: cgns.yml
-  loop: "{{ file_list }}"
-  loop_control:
-    loop_var: cgn
+    full: "{{ full + cust_2 }}"
